// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Configure Azure API Management as an AI Gateway for AI models, MCP tools, and agents. WHEN: semantic caching, token limit, content safety, load balancing, AI model governance, MCP rate limiting, jailbreak detection, add Azure OpenAI backend, add AI Foundry model, test AI gateway, LLM policies, configure AI backend, token metrics, AI cost control, convert API to MCP, import OpenAPI to gateway.",
  "extractedKeywords": [
    "agents",
    "ai",
    "aigateway",
    "authentication",
    "azure",
    "backend",
    "balancing",
    "caching",
    "configure",
    "content",
    "control",
    "convert",
    "cost",
    "deploy",
    "detection",
    "foundry",
    "gateway",
    "governance",
    "identity",
    "import",
    "jailbreak",
    "limit",
    "limiting",
    "load",
    "management",
    "mcp",
    "metrics",
    "model",
    "models",
    "observability",
    "openai",
    "openapi",
    "policies",
    "rate",
    "safety",
    "semantic",
    "test",
    "token",
    "tools",
    "when",
  ],
  "name": "azure-aigateway",
}
`;

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agents",
  "ai",
  "aigateway",
  "authentication",
  "azure",
  "backend",
  "balancing",
  "caching",
  "configure",
  "content",
  "control",
  "convert",
  "cost",
  "deploy",
  "detection",
  "foundry",
  "gateway",
  "governance",
  "identity",
  "import",
  "jailbreak",
  "limit",
  "limiting",
  "load",
  "management",
  "mcp",
  "metrics",
  "model",
  "models",
  "observability",
  "openai",
  "openapi",
  "policies",
  "rate",
  "safety",
  "semantic",
  "test",
  "token",
  "tools",
  "when",
]
`;
